--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -38,4 +38,10 @@ footer p {
     width: 100%;
     padding-bottom: 20px;
   }
+  footer ul {
+    margin-top: 20px;
+  }
+  footer ul li a {
+    font-size: medium;
+  }
 }
